# hdd-organizer

./: .gitignore  README.md  mis_archivos.db  pyproject.toml
analisis/: Archivos_Grandes_2026-05-10_21-08.md  hdd_scan_log_2026-05-15.txt  mapa_gvfs_0ADpoaYbPci0NUk9PVA_2026-05-18_18-37.md  mapa_gvfs_GVfsSharedWithMe_2026-05-18_18-38.md  mapa_local_drive_2026-05-19_08-09.md  reporte_analisis_2026-05-11_17-29.md  simulacion_gdrive_2026-05-18_18-28.md
logs/: reversion_paso2_20260520_134506.json  reversion_paso5_20260519_081622.json  reversion_paso5_20260520_114145.json  reversion_paso6_20260515_234527.json  reversion_paso6_20260516_001106.json  reversion_paso6_20260516_001140.json  reversion_paso6_20260520_113046.json  reversion_paso6_20260520_113051.json  reversion_paso6_20260520_113053.json  reversion_paso6_20260520_113055.json  reversion_paso6_20260520_114616.json  reversion_paso6_20260520_121140.json  reversion_paso6_20260520_121814.json  reversion_paso6_20260520_123655.json  reversion_paso6_20260520_130259.json  reversion_paso6_20260520_130602.json  reversion_paso6_20260520_134434.json  reversion_paso6_20260520_134505.json  reversion_paso6_20260520_134722.json  reversion_paso6_20260520_134723.json  reversion_paso6_20260520_134724.json  reversion_paso6_20260520_134755.json  reversion_paso6_20260520_154022.json  reversion_paso6_20260520_163332.json  reversion_paso6_20260520_203132.json  reversion_paso6_20260520_203134.json
tests/: test_clasificador_documentos.py  test_clasificador_videos.py  test_db.py  test_deduplicador_inteligente.py  test_escuela_docs.py  (+14 more)
(+33 files in other folders)
